# tgmd_bot

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  vercel.json
.learnings/: ERRORS.md
api/: webhook.py
src/md2tg_bot/: bot.py  converter.py
tests/: test_converter.py
