[project]
name = "tgmd_bot"
version = "0.1.0"
description = "A Telegram bot to convert Markdown to Telegram MarkdownV2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot==20.8",
    "python-dotenv==1.0.1",
    "telegramify-markdown==1.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
